--- a/Cadastro.html
+++ b/Cadastro.html
@@ -6,8 +6,8 @@
     <title>Cadastro</title>
 </head>
 
-    <img src="/Imagens/joga+ logo.png">
-    <img src="/Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
+    <img src="Imagens/joga+ logo.png">
+    <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
     <button>Voltar</button> <br><br>
 
     <div>
