--- a/detalhes.html
+++ b/detalhes.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-    <img src="/Imagens/joga+ logo.png">
-    <img src="/Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
+    <img src="Imagens/joga+ logo.png">
+    <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
     <button>Novo Jogo</button> <br>
     <button>Voltar</button> <br>
 
-    <img src="/Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
+    <img src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
 
     <h1>Castlevania: Symphony of the Night</h1>
     <p>Castlevania: Symphony of the Night é um marco 
