--- a/Cadastro.html
+++ b/Cadastro.html
@@ -6,9 +6,15 @@
     <title>Cadastro</title>
 </head>
 
+    <a href="index.html">
     <img src="Imagens/joga+ logo.png">
+    </a>
+
     <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
-    <button>Voltar</button> <br><br>
+    
+    <a href="index.html">
+    <button>Voltar</button> <br>
+    </a>
 
     <div>
         <label for="Título">Título</label>
