--- a/detalhes.html
+++ b/detalhes.html
@@ -7,10 +7,19 @@
 </head>
 <body>
 
+    <a href="index.html">
     <img src="Imagens/joga+ logo.png">
+    </a>
+
     <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
-    <button>Novo Jogo</button> <br>
+    
+    <a href="Cadastro.html">
+    <button >Novo Jogo</button> <br>
+    </a>
+
+    <a href="index.html">
     <button>Voltar</button> <br>
+    </a>
 
     <img src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
 
