--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <img src="Imagens/joga+ logo.png">
     <p>Lista de jogos</p>
     <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
-    <button>Novo Jogo</button> <br>
+    
+    <a href="Cadastro.html">
+    <button >Novo Jogo</button> <br>
+    </a>
 
+    <a href="detalhes.html">
     <img src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
+    </a>
+
     <img src="Imagens/The-Witcher-3-Wild-Hunt-Icone-R2A-Games.jpeg">
     <img src="Imagens/Assassins_Creed_4_Black_Flag_capa.png">
     <img src="Imagens/Metroid-Dread-capa.jpeg">
