--- a/index.html
+++ b/index.html
@@ -4,24 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joga +</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="Imagens/joga+ logo.png">
+
+    <header>
+        <img id="logo" src="Imagens/joga+ logo.png">
+        <nav>
+            <ul>
+                <a href="./index.html">
+                    <button>Home</button>
+                </a>
+                <a href="./Cadastro.html">
+                    <button>Cadastro</button>
+                </a>
+            </ul>
+        </nav>
+    </header>
+
     <p>Lista de jogos</p>
-    <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
     
-    <a href="Cadastro.html">
-    <button >Novo Jogo</button> <br>
-    </a>
+    <div class="cards"
+        </a>
+            <a href="detalhes.html">
+            <img src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
+        </a>
 
-    <a href="detalhes.html">
-    <img src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
-    </a>
+            <img src="Imagens/The-Witcher-3-Wild-Hunt-Icone-R2A-Games.jpeg">
+            <img src="Imagens/Assassins_Creed_4_Black_Flag_capa.png">
+            <img src="Imagens/Metroid-Dread-capa.jpeg">
+            <img src="Imagens/81i-E0DuBrL._AC_UF1000,1000_QL80_.jpg">
+            <img src="Imagens/God_of_War_2018_capa.png">
+    </div>
 
-    <img src="Imagens/The-Witcher-3-Wild-Hunt-Icone-R2A-Games.jpeg">
-    <img src="Imagens/Assassins_Creed_4_Black_Flag_capa.png">
-    <img src="Imagens/Metroid-Dread-capa.jpeg">
-    <img src="Imagens/81i-E0DuBrL._AC_UF1000,1000_QL80_.jpg">
-    <img src="Imagens/God_of_War_2018_capa.png">
+    <footer>
+            <img id="logo" src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
+    </footer>
 </body>
 </html>
