--- a/detalhes.html
+++ b/detalhes.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <a href="index.html">
-    <img src="Imagens/joga+ logo.png">
-    </a>
+    <header>
+        <img id="logo" src="Imagens/joga+ logo.png">
+    </header>
 
-    <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
-    
-    <a href="Cadastro.html">
-    <button >Novo Jogo</button> <br>
-    </a>
+        <nav>
+            <a href="./index.html">
+                    <button>Home</button>
+            </a> 
+            <a href="./Cadastro.html">
+                    <button>Cadastro</button>
+            </a>
+        </nav>
 
-    <a href="index.html">
-    <button>Voltar</button> <br>
-    </a>
-
-    <img src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
+    <img id="Castlevania" src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
 
     <h1>Castlevania: Symphony of the Night</h1>
-    <p>Castlevania: Symphony of the Night é um marco 
+        <p>Castlevania: Symphony of the Night é um marco 
         nos jogos de plataforma e um dos títulos mais 
         aclamados da série Castlevania. 
         Lançado em 1997 para PlayStation, o jogo se destaca
@@ -42,6 +42,10 @@
 
         <p>Data de lançamento: 20 de março de 1997</p>
         <p>Plataforma: Playstation</p>
+
+    <footer>
+            <img id="logo" src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
+    </footer>
     
 </body>
 </html>
