--- a/Cadastro.html
+++ b/Cadastro.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <a href="index.html">
-    <img src="Imagens/joga+ logo.png">
-    </a>
+    <header>
+    <img id="logo" src="Imagens/joga+ logo.png">
+    </header>
 
-    <img src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
-    
-    <a href="index.html">
-    <button>Voltar</button> <br><br>
-    </a>
+    <nav>
+        <a href="./index.html">
+                <button>Home</button>
+        </a> 
+        <a href="./Cadastro.html">
+                <button>Cadastro</button>
+        </a>
+    </nav>
 
 <form>
     <div>
@@ -66,6 +69,10 @@
         <button type="submit">Delete Game</button> <br><br>
     </div>
 </form>
+
+<footer>
+    <img id="logo" src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
+</footer>
     
 </body>
 </html>
