--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
         <nav>
             <a href="./index.html">
-                    <button>Home</button>
+                    <button id="navegacao">Home</button>
             </a> 
             <a href="./Cadastro.html">
-                    <button>Cadastro</button>
+                    <button id="navegacao">Cadastro</button>
             </a>
         </nav>
 
-        <p>Lista de jogos</p>
+        <p id="listajogos">Lista de jogos</p>
 
     <div class="cards"
         </a>
@@ -38,6 +38,7 @@
 
     <footer>
             <img id="logo" src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
+            <h3>Desenvolvido por Ricardo Junior</h3>
     </footer>
 </body>
 </html>
