--- a/Cadastro.html
+++ b/Cadastro.html
@@ -13,10 +13,10 @@
 
     <nav>
         <a href="./index.html">
-                <button>Home</button>
+                <button id="navegacao">Home</button>
         </a> 
         <a href="./Cadastro.html">
-                <button>Cadastro</button>
+                <button id="navegacao">Cadastro</button>
         </a>
     </nav>
 
@@ -63,15 +63,16 @@
         <label for="descricao">Descrição: </label>
         <textarea id="descricao"></textarea><br><br>
     </div>
-
-    <div>
-        <button type="submit">Save Game</button> <br><br>
-        <button type="submit">Delete Game</button> <br><br>
-    </div>
 </form>
+
+<div id="botoescadastro">
+    <button id="salvar" type="submit">Save Game</button> 
+    <button id="cancelar" type="submit">Delete Game</button> 
+</div>
 
 <footer>
     <img id="logo" src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
+    <h3>Desenvolvido por Ricardo Junior</h3>
 </footer>
     
 </body>
