--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes</title>
+    <title>Joga +</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,40 +12,32 @@
         <img id="logo" src="Imagens/joga+ logo.png">
     </header>
 
-    <nav>
-        <a href="./index.html">
-                <button id="navegacao">Home</button>
-        </a> 
-        <a href="./Cadastro.html">
-                <button id="navegacao">Cadastro</button>
+        <nav>
+            <a href="./index.html">
+                    <button>Home</button>
+            </a> 
+            <a href="./Cadastro.html">
+                    <button>Cadastro</button>
+            </a>
+        </nav>
+
+        <p>Lista de jogos</p>
+
+    <div class="cards"
         </a>
-    </nav>
+            <a href="detalhes.html">
+            <img src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
+        </a>
 
-    <img id="Castlevania" src="Imagens/Castlevania_Symphony_of_the_Night_Capa.jpg">
-
-        <p id="descricao">Castlevania: Symphony of the Night é um marco 
-        nos jogos de plataforma e um dos títulos mais 
-        aclamados da série Castlevania. 
-        Lançado em 1997 para PlayStation, o jogo se destaca
-        por sua jogabilidade envolvente, exploração profunda 
-        e narrativa rica.
-        
-        História:
-        Quatro anos após os eventos de Castlevania: Rondo of
-        Blood, Richter Belmont, o herói daquela aventura, 
-        desaparece misteriosamente e o Castelo de Drácula
-        ressurge. Alucard, o meio-vampiro filho de Drácula, 
-        desperta de seu sono eterno para investigar
-        o reaparecimento do castelo e descobrir o paradeiro 
-        de Richter.</p>
-
-        <p>Data de lançamento: 20 de março de 1997</p>
-        <p>Plataforma: Playstation</p>
+            <img src="Imagens/The-Witcher-3-Wild-Hunt-Icone-R2A-Games.jpeg">
+            <img src="Imagens/Assassins_Creed_4_Black_Flag_capa.png">
+            <img src="Imagens/Metroid-Dread-capa.jpeg">
+            <img src="Imagens/81i-E0DuBrL._AC_UF1000,1000_QL80_.jpg">
+            <img src="Imagens/God_of_War_2018_capa.png">
+    </div>
 
     <footer>
             <img id="logo" src="Imagens/D_907385-MLB54901558500_042023-O-removebg-preview.png" alt=""> <br>
-            <h3>Desenvolvido por Ricardo Junior</h3>
     </footer>
-    
 </body>
 </html>
