--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         <div class="game-cards">
             <div class="game-card">
                 <a href="Detalhes2.html">
-                <img src="/Imagens/Castlevania.webp" alt="Jogo 1">
+                <img src="Imagens/Castlevania.webp" alt="Jogo 1">
                 </a>
                 <h3>Castlevania: Symphony of the night</h3>
             </div>
             <div class="game-card">
-                <img src="/Imagens/GodOfWarwebp.webp" alt="Jogo 2">
+                <img src="Imagens/GodOfWarwebp.webp" alt="Jogo 2">
                 <h3>God of War</h3>
             </div>
             <div class="game-card">
-                <img src="/Imagens/TW3_Wild_Hunt.png" alt="Jogo 3">
+                <img src="Imagens/TW3_Wild_Hunt.png" alt="Jogo 3">
                 <h3>The Witche 3: Wild Hunt</h3>
             </div>
         </div>
