--- a/detalhes.html
+++ b/detalhes.html
@@ -22,7 +22,7 @@
     <section id="castlevania" class="castlevania">
         <div class="castlevania-cards">
             <div class="castlevania-card">
-                <img src="/Imagens/Castlevania.webp" alt="Jogo 1">
+                <img src="Imagens/Castlevania.webp" alt="Jogo 1">
                 <h3></h3>
             </div>
         </div>
