--- a/Detalhes.html
+++ b/Detalhes.html
@@ -11,9 +11,9 @@
         <nav>
             <div class="logo">Joga +</div>
             <ul>
-                <li><a href="/index2.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/Jogos.html"">Jogos</a></li>
-                <li><a href="/Cadastro2.html"">Cadastro</a></li>
+                <li><a href="/Cadastro.html"">Cadastro</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
