--- a/Jogos.html
+++ b/Jogos.html
@@ -11,9 +11,9 @@
         <nav>
             <div class="logo">Joga +</div>
             <ul>
-                <li><a href="/index2.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/Jogos.html"">Jogos</a></li>
-                <li><a href="/Cadastro2.html"">Cadastro</a></li>
+                <li><a href="/Cadastro.html"">Cadastro</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
         <h2>Seus Jogos</h2>
         <div class="game-cards">
             <div class="game-card">
-                <a href="Detalhes2.html">
+                <a href="Detalhes.html">
                 <img src="Imagens/Castlevania.webp" alt="Jogo 1">
                 </a>
                 <h3>Castlevania: Symphony of the night</h3>
