--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="logo">Joga +</div>
             <ul>
-                <li><a href="/Index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/Jogos.html"">Jogos</a></li>
                 <li><a href="/Cadastro.html"">Cadastro</a></li>
                 <li><a href="#contact">Contato</a></li>
