--- a/CadastroUsuario.html
+++ b/CadastroUsuario.html
@@ -45,3 +45,14 @@
             <button type="submit" class="cadastro-btn">Cadastrar</button>
         </form>
     </div>
+
+    <section id="about" class="about">
+        <h2>Sobre o Site</h2>
+        <p>Joga +, porque no universo dos jogos, a diversão nunca tem limites!</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Desenvolvido por Ricardo Junior</p>
+    </footer>
+</body>
+</html>
