--- a/Detalhes.html
+++ b/Detalhes.html
@@ -30,16 +30,16 @@
         <section id="home" class="banner">
             <div class="banner-content">
                 <h1>Castlevania: Symphony of the Night</h1>
-            </div>
+            </div><br><br>
 
             <h3>Castlevania: Symphony of the Night é um marco 
             nos jogos de plataforma e um dos títulos mais 
             aclamados da série Castlevania. 
             Lançado em 1997 para PlayStation, o jogo se destaca
             por sua jogabilidade envolvente, exploração profunda 
-            e narrativa rica.
+            e narrativa rica.</h3><br>
             
-            História:
+            <h3>História:<br>
             Quatro anos após os eventos de Castlevania: Rondo of
             Blood, Richter Belmont, o herói daquela aventura, 
             desaparece misteriosamente e o Castelo de Drácula
