--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav>
             <div class="logo">Joga +</div>
             <ul>
+                <li><a href="index2.html">Alterar Menu</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Jogos.html"">Seus Jogos</a></li>
                 <li><a href="Cadastro.html">Novo Jogo</a></li>
