--- a/Jogos.html
+++ b/Jogos.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <nav>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="hamburger-menu">☰</label>
+        <nav class="menu">
             <div class="logo">Joga +</div>
                 <ul>
                 <li><a href="index.html">Home</a></li>
