--- a/Detalhes.html
+++ b/Detalhes.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Jogos.html"">Seus Jogos</a></li>
                 <li><a href="Cadastro.html">Novo Jogo</a></li>
-                <li><a href="login.html">Login</a></li>/li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
