--- a/index.html
+++ b/index.html
@@ -4,45 +4,171 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joga +</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="hamburger-menu">☰</label>
-        <nav class="menu">
-            <div class="logo">Joga +</div>
-            <ul>
-                <li><a href="index2.html">Alterar Menu</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Jogos.html"">Seus Jogos</a></li>
-                <li><a href="Cadastro.html">Novo Jogo</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Joga +</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/Jogos.html">Jogos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/Cadastro.html">Novo Jogo</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/login.html">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/index2.html">Alternar menu</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
         </nav>
     </header>
 
-
     <section id="games" class="games">
-        <h2>Jogos em Destaque</h2>
-        <div class="game-cards">
-            <div class="game-card">
+      <h2>Jogos em Destaque</h2>
+  
+      <!-- Carrossel Bootstrap com imagens de fundo e sobreposição de texto -->
+      <div id="gameCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+              <div class="carousel-item active">
                 <a href="Detalhes.html">
-                <img src="Imagens/Castlevania.webp" alt="Jogo 1">
+                  <div class="carousel-background" style="background-image: url('Imagens/Alucard\ banner.png');">
+                      <div class="carousel-caption text-center">
+                          <h3>Castlevania: Symphony of the Night</h3>
+                          <p>Explore o castelo e enfrente desafios em uma jornada épica.</p>
+                      </div>
+                  </div>
                 </a>
-                <h3>Castlevania: Symphony of the night</h3>
-            </div>
-            <div class="game-card">
-                <img src="Imagens/GodOfWarwebp.webp" alt="Jogo 2">
-                <h3>God of War</h3>
-            </div>
-            <div class="game-card">
-                <img src="Imagens/TW3_Wild_Hunt.png" alt="Jogo 3">
-                <h3>The Witcher 3: Wild Hunt</h3>
-            </div>
-        </div>
-    </section>
+              </div>
+              <div class="carousel-item">
+                  <div class="carousel-background" style="background-image: url('Imagens/GOW\ banner.jpg');">
+                      <div class="carousel-caption text-center">
+                          <h3>God of War</h3>
+                          <p>Acompanhe Kratos em sua jornada de redenção e batalhas épicas.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                  <div class="carousel-background" style="background-image: url('Imagens/Geralt-banner.jpg');">
+                      <div class="carousel-caption text-center">
+                          <h3>The Witcher 3: Wild Hunt</h3>
+                          <p>Participe de uma jornada épica com Geralt de Rivia em busca de Ciri.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
 
+          <!-- Controles do carrossel -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+      </div>
+  </section>
+  
+  <!-- Estilo para as imagens de fundo e sobreposição de texto -->
+  <style>
+      .carousel-item {
+          position: relative;
+          height: 500px; /* Altura fixa do carrossel */
+      }
+  
+      .carousel-background {
+          background-size: cover;
+          background-position: center;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+      }
+  
+      .carousel-caption {
+          position: sticky;
+          z-index: 2; /* Coloca o texto sobre o fundo */
+          padding: 0px;
+          color: white;
+          background: rgba(0, 0, 0, 0.5); /* Fundo escuro para contraste */
+      }
+  
+      .carousel-caption h3 {
+          font-size: 2rem;
+          font-weight: bold;
+      }
+  
+      .carousel-caption p {
+          font-size: 1rem;
+      }
+
+    @media (max-width: 576px) {
+        .carousel-item {
+            height: 250px; 
+        }
+
+        .carousel-caption h3 {
+            font-size: 1.2rem;
+            line-height: 1.2;
+        }
+
+        .carousel-caption p {
+            font-size: 0.9rem;
+            line-height: 1.4;
+        }
+    }
+
+    @media (max-width: 768px) {
+        .carousel-item {
+            height: 300px;
+        }
+
+        .carousel-caption h3 {
+            font-size: 1.5rem; 
+            line-height: 1.3;
+        }
+
+        .carousel-caption p {
+            font-size: 1rem;
+            line-height: 1.5;
+        }
+    }
+
+    @media (min-width: 992px) {
+        .carousel-item {
+            height: 400px; 
+        }
+
+        .carousel-caption h3 {
+            font-size: 2rem;
+        }
+
+        .carousel-caption p {
+            font-size: 1rem; 
+        }
+    }
+  </style>
+  
     <section id="about" class="about">
         <h2>Sobre o Site</h2>
         <p>Joga +, porque no universo dos jogos, a diversão nunca tem limites!</p>
@@ -51,5 +177,8 @@
     <footer>
         <p>&copy; 2025 Desenvolvido por Ricardo Junior</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
