--- a/index2.html
+++ b/index2.html
@@ -5,51 +5,234 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joga +</title>
     <link rel="stylesheet" href="styles2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="hamburger-menu">☰</label>
-        <nav class="menu">
-            <div class="logo">Joga +</div>
-            <ul>
-                <li><a href="index.html">Alterar Menu</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Jogos.html"">Seus Jogos</a></li>
-                <li><a href="Cadastro.html">Novo Jogo</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <a class="navbar-brand" href="#">Joga +</a>
+        <ul class="navbar-nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link active" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="/Jogos.html">Jogos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="/Cadastro.html">Novo Jogo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="/login.html">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Alternar menu</a>
+            </li>
+        </ul>
+    </div>
 
+    <!-- Main Content Area (ensuring it's not overlapped by the sidebar) -->
+    <div class="content">
+        <!-- Carrossel de Destaque -->
+        <section id="games" class="games">
+            <h2>Jogos em Destaque</h2>
 
-    <section id="games" class="games">
-        <h2>Jogos em Destaque</h2>
-        <div class="game-cards">
-            <div class="game-card">
-                <a href="Detalhes.html">
-                <img src="Imagens/Castlevania.webp" alt="Jogo 1">
-                </a>
-                <h3>Castlevania: Symphony of the night</h3>
-            </div>
-            <div class="game-card">
-                <img src="Imagens/GodOfWarwebp.webp" alt="Jogo 2">
-                <h3>God of War</h3>
-            </div>
-            <div class="game-card">
-                <img src="Imagens/TW3_Wild_Hunt.png" alt="Jogo 3">
-                <h3>The Witcher 3: Wild Hunt</h3>
-            </div>
-        </div>
-    </section>
+            <!-- Carrossel Bootstrap com imagens de fundo e sobreposição de texto -->
+            <div id="gameCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="Detalhes.html">
+                            <div class="carousel-background" style="background-image: url('Imagens/Alucard\ banner.png');">
+                                <div class="carousel-caption text-center">
+                                    <h3>Castlevania: Symphony of the Night</h3>
+                                    <p>Explore o castelo e enfrente desafios em uma jornada épica.</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-background" style="background-image: url('Imagens/GOW\ banner.jpg');">
+                            <div class="carousel-caption text-center">
+                                <h3>God of War</h3>
+                                <p>Acompanhe Kratos em sua jornada de redenção e batalhas épicas.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-background" style="background-image: url('Imagens/Geralt-banner.jpg');">
+                            <div class="carousel-caption text-center">
+                                <h3>The Witcher 3: Wild Hunt</h3>
+                                <p>Participe de uma jornada épica com Geralt de Rivia em busca de Ciri.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-    <section id="about" class="about">
-        <h2>Sobre o Site</h2>
-        <p>Joga +, porque no universo dos jogos, a diversão nunca tem limites!</p>
-    </section>
+                <!-- Controles do carrossel -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- Seção Sobre o site -->
+        <section id="about" class="about">
+            <h2>Sobre o Site</h2>
+            <p>Joga +, porque no universo dos jogos, a diversão nunca tem limites!</p>
+        </section>
+    </div>
 
     <footer>
         <p>&copy; 2025 Desenvolvido por Ricardo Junior</p>
     </footer>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <style>
+        /* Estilo base do carrossel */
+        .carousel-item {
+            position: relative;
+            height: 400px; /* Ajuste da altura do carrossel */
+        }
+
+        .carousel-background {
+            background-size: cover;
+            background-position: center;
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
+        .carousel-caption {
+            position: sticky;
+            z-index: 2;
+            padding: 0px;
+            color: white;
+            background: rgba(0, 0, 0, 0.5);
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+            margin-left: 300px;
+        }
+
+        .carousel-caption h3 {
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        .carousel-caption p {
+            font-size: 1.2rem;
+        }
+
+        /* Sidebar */
+        .sidebar {
+            height: 100vh;
+            width: 250px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #f8f9fa;
+            padding-top: 20px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            transition: width 0.3s ease; /* Transição suave */
+        }
+
+        .sidebar .nav-item {
+            margin: 10px 0;
+        }
+
+        .sidebar .nav-link {
+            font-weight: 500;
+            color: #333;
+        }
+
+        .sidebar .nav-link:hover {
+            background-color: #ddd;
+        }
+
+        /* Conteúdo */
+        .content {
+            margin-left: 250px;
+            padding: 20px;
+            transition: margin-left 0.3s ease;
+        }
+
+        /* Responsividade */
+        @media (max-width: 992px) {
+            .sidebar {
+                width: 200px;
+            }
+
+            .carousel-item {
+                height: 300px;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1.5rem;
+            }
+
+            .carousel-caption p {
+                font-size: 1rem;
+            }
+
+            .content {
+                margin-left: 200px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 100%;
+                height: auto;
+                position: absolute;
+                box-shadow: none;
+            }
+
+            .carousel-item {
+                height: 250px;
+            }
+
+            .carousel-caption h3 {
+                font-size: 1.2rem;
+            }
+
+            .carousel-caption p {
+                font-size: 0.9rem;
+            }
+
+            .content {
+                margin-left: 0;
+                padding: 10px;
+            }
+        }
+
+        @media (max-width: 576px) {
+            .carousel-item {
+            height: 400px; 
+            margin-left: 80px;
+
+        }
+
+        .carousel-caption h3 {
+            font-size: 1.2rem;
+            line-height: 1.2;
+        }
+
+        
+        .carousel-caption p {
+            font-size: 0.9rem;
+            line-height: 1.4;
+        }
+    }
+    </style>
 </body>
 </html>
