--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/Jogos.html">Jogos</a>
+                  <a class="nav-link active" aria-current="page" href="Jogos.html">Jogos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/Cadastro.html">Novo Jogo</a>
+                  <a class="nav-link active" aria-current="page" href="Cadastro.html">Novo Jogo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/login.html">Login</a>
+                  <a class="nav-link active" aria-current="page" href="login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/index2.html">Alternar menu</a>
+                  <a class="nav-link active" aria-current="page" href="index2.html">Alternar menu</a>
                 </li>
               </ul>
               <form class="d-flex" role="search">
