--- a/index2.html
+++ b/index2.html
@@ -13,19 +13,19 @@
         <a class="navbar-brand" href="#">Joga +</a>
         <ul class="navbar-nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="/index.html">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/Jogos.html">Jogos</a>
+                <a class="nav-link active" href="Jogos.html">Jogos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/Cadastro.html">Novo Jogo</a>
+                <a class="nav-link active" href="Cadastro.html">Novo Jogo</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/login.html">Login</a>
+                <a class="nav-link active" href="login.html">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Alternar menu</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Alternar menu</a>
             </li>
         </ul>
     </div>
