--- a/Cadastro.html
+++ b/Cadastro.html
@@ -86,5 +86,8 @@
     <footer>
         <p>&copy; 2025 Desenvolvido por Ricardo Junior</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
